k8s/infrastructure/keycloak/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: keycloak

  labels:
    app: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: sstore

spec:
  type: ClusterIP

  selector:
    app: keycloak

  ports:
    - name: http
      port: 8080
      targetPort: http
